Start writing gRPC service
